--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/ups.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
+    <script src="//code.jivosite.com/widget/aEaYuNZBWV" async></script>
     <title>Novastrans</title>
   </head>
   <body>
